# CLisp

./: .gitignore  README.md  antlr_generate.sh  clisp  clisp.py  clisp.sh  compile_runtime_lib.sh  doc.md  example.clj  example.scm  install.sh  readme.MD
docs/: doc.md
misc/: LISP-Машина.docx
runtime/: .gitignore  CMakeLists.txt  arithmetic.c  arithmetic.h  base.c  base.h  clisp.h  const.h  core.c  core.h  io.c  io.h  main.c  postponed.c  postponed.h  runtime.c  runtime.h  stdio.c  utils.c
runtime/lib/: arithmetic.c  arithmetic.h  comparation.c  comparation.h  const.c  const.h  const_types.h  core.c  core.h  environment.c  environment.h  evaluable.c  evaluable.h  io.c  io.h  logic.c  logic.h  memory.c  memory.h  native_calls.c  native_calls.h  primitive.c  primitive.h  primitive_types.h  utils.c  utils.h
runtime/lib/core/: arithmetic.c  comparation.c  core.c  core.h  environment.c  environment.h  io.c  logic.c  logic.h  native_calls.c  native_calls.h  utils.c  utils.h
runtime/lib/data_objects/: dynamic_array.c  dynamic_array.h  stack.c  stack.h
runtime/lib/exit/: abort.c  abort.h  error.h
runtime/lib/memory/: memory.c
runtime/lib/objects/: evaluable.c  evaluable.h  lambda.c  lambda.h  list.c  list.h  pair.c  pair.h  primitive.c  primitive.h  primitive_types.h  vector.c  vector.h
runtime/sandbox/: README.md  main.c
runtime_sandbox/: .gitignore  CMakeLists.txt  main.c
tests/: README.md  compile.sh  config.py  install.sh  launch.sh  main.py  memory.sh  pyproject.toml  test.py  utils.py
translator/: .gitignore  1.c  1.scm  1_actual.c  2.c  2.scm  (+10 more)
(+232 files in other folders)
